# conv-proxy

./: .gitignore  FRONTEND_REBUILD.md  README.md  cli.py  convproxy_cli.py  pyproject.toml  requirements.txt  run.sh  start_monitor_conv_proxy.bat
benchmarks/: llm_benchmark.py  llm_thinking_benchmark.py  stt_benchmark.py  tts_benchmark.py
config/: PROXY.md
docs/: openclaw-integration.md  openrouter-streaming-reference.md  vad-research.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/lib/components/: AgentMonitor.svelte  AudioVisualizer.svelte  ChatInput.svelte  Header.svelte  MessageBubble.svelte  ProxyChat.svelte  ResponseDisplay.svelte  SettingsPanel.svelte  StatusBar.svelte  TaskDraft.svelte  TranscriptionDisplay.svelte  VoiceButton.svelte
frontend/src/lib/services/: api.ts  audioPlayer.ts  audioRecorder.ts  (+2 more)
llm/: engine.py  lfm_engine.py  lfm_instruct_engine.py  lfm_thinking_engine.py  openrouter_engine.py
proxy/: controller.py  conv_proxy.py  intent.py
src/: __init__.py  config.py
src/gateway/: client.py  events.py
src/proxy/: controller.py
src/server/: app.py
src/stt/: browser.py  engine.py  moonshine.py  whisper_cpp.py
src/voice/: pipeline.py  wakeword.py
stt/: __init__.py  base.py  browser.py  engine.py  moonshine.py  whisper_cpp.py
tests/: test_gateway_integration.py  test_integration.py  test_proxy_tools.py  test_proxy_tools_v2.py
tts/: kokoro_streaming.py
voice/: pipeline.py  wakeword.py
webapp/: app.py
webapp/static/: app.js  index.html  style.css
(+7 files in other folders)
